kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-2
  namespace: homework ## Создаем в указанном namespace
spec:
  replicas: 3 ## 3 экземпляра пода
  selector:
    matchLabels:
      homework: "true"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 ## Максимум 1 под будет недоступен
  template:
    metadata:
      labels:
        homework: "true"
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - -c
                - echo "Clear container workdir">/proc/1/fd/1 && rm /homework/*
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        readinessProbe: ## Сменил проба готовности контейнера на httpGet
          httpGet:
            path: /index.html
            port: 80
          failureThreshold: 1
          periodSeconds: 10
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: configfile
          mountPath: /homework/conf
      dnsPolicy: Default
      affinity:  ## Мапим поды деплоймента только на ноды с label=homework=true
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: In
                values:
                - "true"
      volumes:
      - name: workdir
        persistentVolumeClaim:  ## 
          claimName: test-pvc
      - name: configfile
        configMap:  ##
          name: test-cm-1
